--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 .xml
 .kotlin_module
 .idea
+Kotlin/out/production/Kotlin/_10989Kt.class
+
+Kotlin/out/production/Kotlin/_2231Kt.class
+
+Kotlin/out/production/Kotlin/_2445Kt.class
+
+Kotlin/out/production/Kotlin/META-INF/Kotlin.kotlin_module
